k3s/applications/tdarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
  labels:
    app.kubernetes.io/name: tdarr
spec:
  type: ClusterIP
  selector:
    app: tdarr
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
      protocol: TCP
    - name: server
      port: 8266
      targetPort: 8266
      protocol: TCP
