k3s/applications/tdarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: tdarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: tdarr.homelab.properties
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
  tls:
    - secretName: tdarr-tls
      hosts:
        - tdarr.homelab.properties
